working on POC react task

--- a/src/assets/scss/Components/components.scss
+++ b/src/assets/scss/Components/components.scss
@@ -1,2 +1,4 @@
-@import "./buttons.scss";
-@import "./common.scss";
+@import "buttons.scss";
+@import "typography.scss";
+@import "breadcrumbs.scss";
+
