--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,2 +1,3 @@
 @import "./variable.scss";
-@import "./Components/components.scss";
+@import "./components/components.scss";
+@import "./templates/template.scss";
