--- a/src/assets/scss/templates/global.scss
+++ b/src/assets/scss/templates/global.scss
@@ -1,6 +1,6 @@
 body {
     font-family: $font-family !important;
-    color: $body-color;
+    color: $body-color !important;
     background-color: $white;
     height: 100vh;
 }
@@ -42,6 +42,9 @@ body {
 .font-20 {
     font-size: $font-size-20;
 }
+.font-14 {
+    font-size: $font-size-14;
+}
 
 // border 
 .border-bottom-grey-light {
@@ -61,6 +64,9 @@ body {
 .padding-top-80 {
     padding-top: $space80;
 }
+.p-0 {
+    padding: 0 !important;
+}
 
 
 // margin 
@@ -69,6 +75,15 @@ body {
 }
 .mb-12 {
     margin-bottom: $space12;
+}
+.ml-8 {
+    margin-left: $space8;
+}
+.mb-16 {
+    margin-bottom: $space16;
+}
+.mb-8 {
+    margin-bottom: $space8;
 }
 
 // width 
