--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -29,6 +29,7 @@ $space12:                            12px;
 $space16:                           16px;
 $space24:                           24px;
 $space32:                           32px;
+$space60:                           60px;
 $space80:                           80px;
 
 
