work on header and other point

--- a/src/assets/scss/templates/global.scss
+++ b/src/assets/scss/templates/global.scss
@@ -4,7 +4,9 @@ body {
     background-color: $white;
     height: 100vh;
 }
-
+.bg-white{
+    background-color: $white;
+}
 // flex 
 .d-flex {
     display: flex;
