--- a/src/assets/scss/Components/card.scss
+++ b/src/assets/scss/Components/card.scss
@@ -3,6 +3,8 @@
     padding: $space16;
 
     &.sub-card {
+        box-shadow: none;
+        
         .sub-card-img {
             width: 100%;
             height: 150px;
