--- a/src/assets/scss/templates/global.scss
+++ b/src/assets/scss/templates/global.scss
@@ -5,9 +5,25 @@ body {
     height: 100vh;
 }
 
+.text-decoration-none {
+    text-decoration: none;
+}
+
 // flex 
 .d-flex {
     display: flex;
+}
+.d-md-flex {
+    display: flex;
+
+    @media only screen and (max-width: $md-brekpoint) {
+        display: block;
+    }
+}
+.d-md-none {
+    @media only screen and (max-width: $md-brekpoint) {
+        display: none;
+    }
 }
 .align-items-center {
     align-items: center;
@@ -38,12 +54,26 @@ body {
     font-weight: $font-weight-bold;
 }
 
+// text align 
+.text-align-center {
+    text-align: center;
+}
+.text-align-md-end {
+    text-align: end;
+    @media only screen and (max-width: $md-brekpoint) {
+       text-align: start;
+    }
+}
+
 // font size 
 .font-20 {
     font-size: $font-size-20;
 }
 .font-14 {
-    font-size: $font-size-14;
+    font-size: $font-size-14 !important;
+}
+.font-16 {
+    font-size: $font-size-16;
 }
 
 // border 
@@ -52,6 +82,9 @@ body {
 }
 .border-grey-light {
     border: $border-width-1 $border-solid $grey-light;
+}
+.border-0 {
+    border: 0 !important;
 }
 
 // padding 
@@ -96,6 +129,11 @@ body {
 .mb-16 {
     margin-bottom: $space16;
 }
+.mb-md-16 {
+    @media only screen and (max-width: $md-brekpoint) {
+        margin-bottom: $space16;
+    }
+}
 .mb-8 {
     margin-bottom: $space8;
 }
@@ -104,8 +142,19 @@ body {
 .w-50 {
     width: 50%;
 }
+.min-w-180px {
+    min-width: 180px;
+}
+.min-w-200px {
+    min-width: 200px;
+}
 
 // border radius 
 .border-radius-4px {
     border-radius: $border-radius-4px;
+}
+
+// background color 
+.bg-primary-light {
+    background-color: $primary-light;
 }
