--- a/src/assets/scss/templates/home-page.scss
+++ b/src/assets/scss/templates/home-page.scss
@@ -1,12 +1,21 @@
-.pulmonary-tuberculosis-option {
-    @media only screen and (max-width: $md-brekpoint) {
-        flex-wrap: wrap;
-    }
-
-    .option {
+.pulmonary-content {
+    .pulmonary-tuberculosis-option {
         @media only screen and (max-width: $md-brekpoint) {
-            margin-bottom: $space8;
+            flex-wrap: wrap;
         }
     
+        .option {
+            @media only screen and (max-width: $md-brekpoint) {
+                margin-bottom: $space8;
+            }
+        
+        }
     }
+
+    .css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input  {
+        background-color: $primary-light;
+    }
+}
+.css-1muzjf8 {
+    border-bottom: 0;
 }
