--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -50,11 +50,14 @@ $border-radius-4px:                 4px;
 
 // Border width 
 
-$border-width-1:                  1px;
-$border-width-2:                  2px;
+$border-width-1:                    1px;
+$border-width-2:                    2px;
 
 // Border type
 $border-solid:                     solid; 
+
+// boc shadow 
+$box-shadow:                       0px 4px 4px 0px rgba(0, 0, 0, 0.251);
 
 // breakpoint
 $xl-brekpoint:                    1199.98px;
